[fix] remove sharebigfiles specific alignement

--- a/css/icons/_apps.scss
+++ b/css/icons/_apps.scss
@@ -4,18 +4,10 @@ i.sharebigfiles-large, i.type.sharebigfiles, i.sharebigfiles{
     @include fonticon;
 }
 i.sharebigfiles-large::before, i.type.sharebigfiles::before, i.sharebigfiles::before{
-  content: "\E8CB";
+  content: "\e8d4";
   color: $purple;
 }
-i.sharebigfiles-large::before{
-  font-size: 85px;
-  line-height: 35px;
-}
-i.type.sharebigfiles::before{
-    font-size: 30px;
-    line-height: 22px;
-    vertical-align: top;
-}
+
 i.agenda-large, i.type.agenda, i.agenda{
   @include fonticon;
 }
